adicionando novos textos

--- a/ola.html
+++ b/ola.html
@@ -9,7 +9,8 @@
 <body>
     <h1>Olá</h1>
     <h2>Mundo</h2>
-    <h3>Testando...</h3>
-    <p>não tem mais o "MUNDO"</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum quaerat optio modi quod quo iusto, repellendus placeat autem pariatur nihil earum numquam explicabo laboriosam, ad aperiam. Inventore repellat aspernatur ipsum.</p>
+    <h3>DELL</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias eos neque sed nihil error, cumque sequi in tempora quas repellat labore deserunt facilis non incidunt perferendis maiores dignissimos explicabo repellendus!</p>
 </body>
 </html>
